# RuneUI

./: .editorconfig  .gitattributes  .gitignore  .jshintrc  Gruntfile.js  LICENSE  README.md  _footer.php  _header.php  _player_engine.php  credits.php  dev.php  help.php  index.php  manifest.webapp  mpc_fade  mpd-config.php  net-config.php  package.json  settings.php  sources.php
_OS_SETTINGS/boot/: cmdline.txt
_OS_SETTINGS/etc/: motd  mpd.conf  rc.local
_OS_SETTINGS/etc/modprobe.d/: alsa-base.conf
_OS_SETTINGS/etc/netctl/: eth0
_OS_SETTINGS/etc/nginx/: nginx-dev.conf  nginx-prod.conf  nginx.conf
_OS_SETTINGS/etc/php/: php-fpm.conf  php.ini
_OS_SETTINGS/etc/php/conf.d/: opcache.ini
_OS_SETTINGS/etc/php/fpm.d/: command.conf  db.conf  display.conf
_OS_SETTINGS/etc/samba/: smb-dev.conf  smb-prod.conf  smb.conf
_OS_SETTINGS/etc/sysctl.d/: raspberrypi.conf
_OS_SETTINGS/etc/udevil/: udevil.conf
_OS_SETTINGS/usr/lib/systemd/system/: mpdscribble.service  rune_SY_wrk.service  rune_rpi_oHdmi.service  rune_rpi_oJack.service  rune_wdog.service  shairport.service  watchdog.service
_TEST/: index.html
app/: alarm_ctl.php  api_ctl.php  config_ctl.php  coverart2_ctl.php  coverart_ctl.php  credits_ctl.php  debug_ctl.php  dev_ctl.php  fade_ctl.php  login_ctl.php  lyric_ctl.php  mpd_ctl.php  network_ctl.php  playback_ctl.php  settings_ctl.php  sources_ctl.php  tun_ctl.php  wakeup_ctl.php
app/api/: audio_ctl.php  coverart_ctl.php  credits_ctl.php  debug_ctl.php  dev_ctl.php  login_ctl.php  mpd_ctl.php  network_ctl.php  settings_ctl.php  sources_ctl.php  system_ctl.php  tun_ctl.php
app/config/: config.php  index.html
app/config/_os/boot/: cmdline.txt
app/config/_os/etc/: fstab.rpi  issue  minidlna.conf  motd  mpd.conf  mpdscribble.conf  netconfig  rc.local  redis.conf  redis.conf.new
app/config/_os/etc/modprobe.d/: modprobe.conf  snd-soc-pcm512x.conf
app/config/_os/etc/netctl/: eth0-dhcp  eth0-static  wlan0-wpa_supplicant-multissid-dhcp  wlan0-wpa_supplicant-multissid-static
app/config/_os/etc/nginx/: nginx-dev.conf  nginx-prod.conf  nginx.conf
app/config/_os/etc/php/: php-fpm.conf  php-fpm.conf.default  php.ini
app/config/_os/etc/profile.d/: proxy.sh
app/config/_os/etc/samba/: smb-dev.conf  smb-prod.conf  smb.conf
app/config/_os/etc/security/: limits.conf
app/config/_os/usr/local/src/mpdscribble-0.22/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac
app/config/_os/usr/local/src/mpdscribble-0.22/doc/: mpdscribble.1  mpdscribble.conf
app/config/_os/usr/local/src/mpdscribble-0.22/src/: cmdline.c  cmdline.h  compat.h  daemon.c  daemon.h  file.c  file.h  http_client.h  http_client_curl.c  http_client_soup.c  journal.c  journal.h  lmc.c  lmc.h  log.c  log.h  mpdscribble.c  record.c  record.h  scrobbler.c  scrobbler.h
app/config/_os/usr/local/src/mpdscribble-0.22/src/.deps/: cmdline.Po  daemon.Po  file.Po  http_client_curl.Po  journal.Po  lmc.Po  log.Po  mpdscribble.Po  record.Po  scrobbler.Po
app/config/defaults/: avahi_runeaudio.service  eth0  libao.conf  mpdscribble.conf  shairport.service  spopd.conf  wpa_supplicant.conf
app/libs/: LastRSS.php  composer.json  runeaudio.php
app/templates/: alarm.php  api_lo.php  config.php  credits.php  debug.php  default_lo.php  dev.php  error.php  fade.php  footer.php  header.php  login.php  mpd.php  mpd_manual.php  network.php  network_edit.php  network_edit_manual.php  network_wlan.php  playback.php  settings.php  sources.php  sources_edit.php  wakeup.php
assets/css/: jquery.clockpicker.min.css  musicapristina.css  onScreenKeyboard.css  runeui.css
assets/fonts/lato/: lato-bold-webfont.eot  lato-italic-webfont.eot  lato-light-webfont.eot  lato-regular-webfont.eot
assets/img/: browserconfig.xml
assets/js/: runeui-static.js  runeui._data.js  runeui._helpers.js  runeui._init.js  runeui._mithril.js  runeui._modal.js  runeui._playback_controls.js  runeui.audio.js  runeui.credits.js  runeui.debug.js  runeui.dev.js  runeui.error.js  runeui.js  runeui.min.js  runeui.mpd.js  runeui.navigation.js  runeui.network.js  runeui.network_wired.js  runeui.network_wireless.js  runeui.playback_controls.js  runeui.settings.js  runeui.source.js  runeui.sources.js
assets/less/: bootstrap-custom.less  musicapristina-custom.less  musicapristina-variables.less  musicapristina.less  runeui-custom.less  runeui-fonts.less  runeui-variables.less  runeui.less
assets/less/bootstrap/: .csscomb.json
assets/less/bootstrap-select/: bootstrap-select.less
assets/less/csspinner/: csspinner.less
assets/less/font-awesome/: font-awesome.less  icons.less  path.less  spinning.less  variables.less
assets/less/themes/: classic.less  spucci.less
assets/less/toggle-switch/: toggle-switch.less
command/: airplay.sh  airplay_toggle  cachectl.php  cmd_async  debug_collector  index.php  lyric.sh  mpd-watchdog  mpd_prio  opcache.php  orion_optimize.sh  play  player_wdog.sh  player_wrk.php  refresh_ao  refresh_nics  rune_PL_wrk  rune_PL_wrk.php  rune_SY_wrk  rune_SY_wrk.php  rune_prio  rune_rpi_oHdmi  rune_rpi_oJack  rune_shutdown  rune_wdog  session.php  sndusb_nrpacks  stop  switch_player  ui_notify.php  ui_update_async  update_os  usbmount  usbmount.sh  wolfson.sh
config/: index.html  local.html
css/: bootstrap-select.css  bootstrap.css  bootstrap.min.css  flat-ui.css  font-awesome.min.css  runeui.css
db/: index.php  phpinfo.php  player.db  player.db.default  playerdb_schema.sql  redis_acards_details  redis_acards_details.php  redis_datastore_setup  redis_datastore_setup.php
inc/: config.inc  connection.php  coverart.php  player_lib.php
js/: application.js  bootstrap-contextmenu.js  notify.js  player_lib.js  scripts-configuration.js  scripts-playback.js
templates/: credits.html  help.html  indextpl.html  mpd-config-manual.html  mpd-config.html  net-config-manual.html  net-config.html  net-interface.html  settings.html  source-default.txt  source-manual.html  source.html  sources.html
templates/skins/default/: skin.css
(+41 files in other folders)
